# mekro

./: Cargo.toml  example.json  mekro.config.json
src/: commands.rs  configuration.rs  main.rs
