[package]
name = "micro-manage"
version = "0.1.0"
authors = ["limzykenneth <limzy.kenneth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.19"
tui = { version = "0.15", default-features = false, features = ['crossterm'] }
tokio = { version = "1", features = ["full"] }
textwrap = "0.14"
clap = "~2.33"