[package]
name = "mekro"
version = "0.1.0"
authors = ["limzykenneth <limzy.kenneth@gmail.com>"]
edition = "2018"
description = "Manage your micro services in dev"
license = "BSD-2-Clause"
repository = "https://github.com/limzykenneth/micro-manage"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.19"
tui = { version = "0.15", default-features = false, features = ['crossterm'] }
tokio = { version = "1", features = ["full"] }
textwrap = "0.14"
clap = "~2.33"
nix = "0.22"
console = "0.14.1"
libc = "0.2"
terminal_size = "0.2.6"
